--- a/public/css/jpost.css
+++ b/public/css/jpost.css
@@ -14,3 +14,11 @@ table {
 .btn {
   text-transform: none !important;
 }
+
+.slice-selection {
+  opacity: 0;
+}
+
+.slice-header {
+  display: none;
+}
